--- a/Moviewer/MainWindow.xaml
+++ b/Moviewer/MainWindow.xaml
@@ -18,6 +18,10 @@
         <TextBlock Classes="title"> ER </TextBlock>
       </StackPanel>
     </Border>
+
+    <StackPanel Grid.Row="1">
+      <TextBlock Text="{Binding Text, Mode=OneWay}"/>
+    </StackPanel>
   </Grid>
 </Window>
 
